# libcamlite-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
cxx/: stream_info.c  wrap.cxx  wrap.h
src/: lib.rs  main.rs
